# crewai-cities-trial

./: .gitignore  London_01_wiki_article.md  Mumbai_01_wiki_article.md  NYC02_wiki_article.md  Pune_wiki_article.md  README.md  pyproject.toml  requirements.txt
old_outputs/: Dubai_01business_research.txt  Dubai_01wiki_article.md  Dubai_02business_research.txt  Dubai_02wiki_article.md  NYC01_business_research.txt  NYC01_wiki_article.md  NYC02_business_research.txt  Paris01business_research.txt  Paris01wiki_article.md  Satara_01_business_research.txt  Satara_01_wiki_article.md
outputs/: 01Chicago_wiki_article.md  01Delhi_wiki_article.md  01London_wiki_article.md  Tokyo01_business_research.txt  Tokyo01_wiki_article.md  Tokyo02_business_research.txt  Tokyo02_wiki_article.md
outputs/01Jodhpur/: 00_wiki_article.md  01_introduction.md  02_data_and_facts.md  03_government.md  04_economy.md  05_business_environment.md  06_infrastructure.md  07_technology.md
outputs/01Pune/: 00_wiki_article.md  01_introduction.md  02_data_and_facts.md  03_government.md  04_economy.md  05_business_environment.md  06_infrastructure.md  07_technology.md
outputs/01Rome/: 00wiki_article.md  01introduction.md  02data_and_facts.md  03government.md  04economy.md  05business_environment.md  06infrastructure.md  07technology.md
outputs/01SanFrancisco/: 01introduction.md  03government.md  04economy.md
outputs/01Seoul/: 00_wiki_article.md  01_introduction.md  02_data_and_facts.md  03_government.md  04_economy.md  05_business_environment.md  06_infrastructure.md  07_technology.md
(+9 files in other folders)
