[project]
name = "trial"
version = "0.1.0"
description = "trial using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "langtrace_python_sdk>=3.5"
]

[project.scripts]
trial = "trial.main:run"
run_crew = "trial.main:run"
train = "trial.main:train"
replay = "trial.main:replay"
test = "trial.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
